RESOLVED FIXED105958
[Mac] [WK2] platform/mac/fast/events/numpad-keycode-mapping.html fails
https://bugs.webkit.org/show_bug.cgi?id=105958
Summary [Mac] [WK2] platform/mac/fast/events/numpad-keycode-mapping.html fails
Ryosuke Niwa
Reported 2013-01-02 15:22:22 PST
We’re seeing failure like this one: http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK2%20(Tests)/r138643%20(4408)/platform/mac/fast/events/numpad-keycode-mapping-pretty-diff.html --- /Volumes/Data/slave/mountainlion-release-tests-wk2/build/layout-test-results/platform/mac/fast/events/numpad-keycode-mapping-expected.txt +++ /Volumes/Data/slave/mountainlion-release-tests-wk2/build/layout-test-results/platform/mac/fast/events/numpad-keycode-mapping-actual.txt @@ -3,24 +3,24 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS getKeyCode('.') is 0x6E -PASS getKeyCode('*') is 0x6A -PASS getKeyCode('+') is 0x6B -PASS getKeyCode('clear') is 0x0C -PASS getKeyCode('/') is 0x6F -PASS getKeyCode('enter') is 0x0D -PASS getKeyCode('-') is 0x6D -PASS getKeyCode('=') is 0xBB -PASS getKeyCode('0') is 0x60 -PASS getKeyCode('1') is 0x61 -PASS getKeyCode('2') is 0x62 -PASS getKeyCode('3') is 0x63 -PASS getKeyCode('4') is 0x64 -PASS getKeyCode('5') is 0x65 -PASS getKeyCode('6') is 0x66 -PASS getKeyCode('7') is 0x67 -PASS getKeyCode('8') is 0x68 -PASS getKeyCode('9') is 0x69 +FAIL getKeyCode('.') should be 110. Was 65. +FAIL getKeyCode('*') should be 106. Was 65. +FAIL getKeyCode('+') should be 107. Was 65. +FAIL getKeyCode('clear') should be 12. Was 65. +FAIL getKeyCode('/') should be 111. Was 65. +FAIL getKeyCode('enter') should be 13. Was 65. +FAIL getKeyCode('-') should be 109. Was 65. +FAIL getKeyCode('=') should be 187. Was 65. +FAIL getKeyCode('0') should be 96. Was 48. +FAIL getKeyCode('1') should be 97. Was 65. +FAIL getKeyCode('2') should be 98. Was 65. +FAIL getKeyCode('3') should be 99. Was 65. +FAIL getKeyCode('4') should be 100. Was 65. +FAIL getKeyCode('5') should be 101. Was 53. +FAIL getKeyCode('6') should be 102. Was 65. +FAIL getKeyCode('7') should be 103. Was 55. +FAIL getKeyCode('8') should be 104. Was 65. +FAIL getKeyCode('9') should be 105. Was 57. PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch (4.92 KB, patch)
2013-01-03 13:18 PST, Sailesh Agrawal
no flags
Ryosuke Niwa
Comment 1 2013-01-02 15:26:24 PST
Added a test expectation in http://trac.webkit.org/changeset/138662.
Sailesh Agrawal
Comment 2 2013-01-02 15:28:17 PST
Will fix, sorry for the failure.
Sailesh Agrawal
Comment 3 2013-01-03 13:18:42 PST
Sailesh Agrawal
Comment 4 2013-01-03 13:21:09 PST
Uploaded patch to fix the WebKitTestRunner failure. Alexey and Ryosuke, could you please take a look? Thanks.
Alexey Proskuryakov
Comment 5 2013-01-03 13:29:25 PST
Comment on attachment 181209 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=181209&action=review > Tools/WebKitTestRunner/mac/EventSenderProxy.mm:370 > + eventCharacter = currentCharacterString; I'm not sure why this assignment is needed. We were not assigning to eventCharacter in the code that you remove.
Sailesh Agrawal
Comment 6 2013-01-03 15:58:29 PST
Comment on attachment 181209 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=181209&action=review >> Tools/WebKitTestRunner/mac/EventSenderProxy.mm:370 >> + eventCharacter = currentCharacterString; > > I'm not sure why this assignment is needed. We were not assigning to eventCharacter in the code that you remove. For the characters I removed eventCharacter is already set to the correct value. The only cases where it needs to be changed is for for the Clear and Enter keys.
WebKit Review Bot
Comment 7 2013-01-04 02:20:28 PST
Comment on attachment 181209 [details] Patch Clearing flags on attachment: 181209 Committed r138787: <http://trac.webkit.org/changeset/138787>
WebKit Review Bot
Comment 8 2013-01-04 02:20:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.