[Mac] [WK2] platform/mac/fast/events/numpad-keycode-mapping.html fails https://bugs.webkit.org/show_bug.cgi?id=105958

Patch by Sailesh Agrawal <sail@chromium.org> on 2013-01-04
Reviewed by Alexey Proskuryakov.

Tools:

Ported code from DumpRenderTree to WebKitTestRunner to map all numpad keys.

* WebKitTestRunner/mac/EventSenderProxy.mm:
(KeyMappingEntry):
(WTR):
(WTR::EventSenderProxy::keyDown): Added all numpad keys.

LayoutTests:

Fixed numpad-keycode-mapping.html failure in WebKitTestRunner.

* platform/mac-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/124262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138787 268f45cc-cd09-0410-ab3c-d52691b4dbfc